--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,30 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+!/lib/log4j-1.2.14.jar
+!/lib/commons-pool-1.5.6.jar
+!/lib/aspectjweaver.jar
+!/lib/hsqldb-2.3.1.jar
+!/lib/commons-digester-1.6.jar
+!/lib/dom4j-1.6.1.jar
+!/lib/commons-fileupload-1.2.1.jar
+!/lib/quartz-all-1.6.5.jar
+!/lib/slf4j-simple-1.5.8.jar
+!/lib/standard.jar
+!/lib/commons-collections.jar
+!/lib/commons-chain-1.1.jar
+!/lib/antlr-2.7.2.jar
+!/lib/commons-logging-1.1.1.jar
+!/lib/commons-io-1.3.2.jar
+!/lib/commons-dbcp-1.3.jar
+!/lib/commons-validator-1.3.0.jar
+!/lib/mail-1.4.jar
+!/lib/mysql-connector-java-5.1.25-bin.jar
+!/lib/gson-2.2.4.jar
+!/lib/slf4j-api-1.5.8.jar
+!/lib/activation-1.1.jar
+!/lib/commons-lang.jar
+!/lib/commons-beanutils-1.7.0.jar
+!/lib/commons-codec-1.6.jar
+!/lib/aopalliance.jar
+!/lib/cglib-nodep-2.1_3.jar
