--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,7 +1,7 @@
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs \u4efb\u52a1
-libs.CopyLibs.prop-version=1.0
+libs.CopyLibs.prop-version=2.0
 libs.hibernate4-persistence.classpath=\
     ${base}/hibernate4-persistence/antlr-2.7.7.jar;\
     ${base}/hibernate4-persistence/c3p0-0.9.2.1.jar;\
@@ -20,6 +20,18 @@ libs.hibernate4-persistence.classpath=\
     ${base}/hibernate4-persistence/hibernate-jpa-2.0-api-1.0.1.Final.jar
 libs.hibernate4-persistence.displayName=Hibernate 4.x(JPA2.0)
 libs.hibernate4-persistence.prop-maven-dependencies=\n                org.hibernate:hibernate-entitymanager:4.2.6.Final:jar\n            
+libs.hibernate4.3.classpath=\
+    ${base}/hibernate-4.3.0/lib/required/antlr-2.7.7.jar;\
+    ${base}/hibernate-4.3.0/lib/required/dom4j-1.6.1.jar;\
+    ${base}/hibernate-4.3.0/lib/required/hibernate-commons-annotations-4.0.4.Final.jar;\
+    ${base}/hibernate-4.3.0/lib/required/hibernate-core-4.3.0.Final.jar;\
+    ${base}/hibernate-4.3.0/lib/required/hibernate-jpa-2.1-api-1.0.0.Final.jar;\
+    ${base}/hibernate-4.3.0/lib/required/jandex-1.1.0.Final.jar;\
+    ${base}/hibernate-4.3.0/lib/required/javassist-3.18.1-GA.jar;\
+    ${base}/hibernate-4.3.0/lib/required/jboss-logging-3.1.3.GA.jar;\
+    ${base}/hibernate-4.3.0/lib/required/jboss-logging-annotations-1.2.0.Beta1.jar;\
+    ${base}/hibernate-4.3.0/lib/required/jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+libs.hibernate4.3.displayName=hibernate4.3
 libs.javaee-endorsed-api-6.0.classpath=\
     ${base}/javaee-endorsed-api-6.0/javax.annotation.jar;\
     ${base}/javaee-endorsed-api-6.0/jaxb-api-osgi.jar;\
@@ -41,3 +53,40 @@ libs.junit_4.javadoc=\
 libs.junit_4.prop-maven-dependencies=junit:junit:4.10:jar
 libs.junit_4.src=\
     ${base}/junit_4/junit-4.10-sources.jar
+libs.spring4.0.classpath=\
+    ${base}/spring-4.0.0/spring-aop-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-aspects-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-beans-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-build-src-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-context-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-context-support-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-core-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-expression-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-framework-bom-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-instrument-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-instrument-tomcat-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-jdbc-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-jms-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-messaging-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-orm-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-oxm-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-test-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-tx-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-web-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-webmvc-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-webmvc-portlet-4.0.0.RELEASE.jar;\
+    ${base}/spring-4.0.0/spring-websocket-4.0.0.RELEASE.jar
+libs.spring4.0.displayName=spring4.0
+libs.springSecurity3.classpath=\
+    ${base}/springsecurity-3.1.2/spring-security-acl-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-aspects-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-cas-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-config-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-core-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-crypto-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-ldap-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-openid-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-remoting-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-taglibs-3.1.4.RELEASE.jar;\
+    ${base}/springsecurity-3.1.2/spring-security-web-3.1.4.RELEASE.jar
+libs.springSecurity3.displayName=springSecurity3
