--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,6 @@ endorsed.classpath=\
 excludes=
 file.reference.activation-1.1.jar=lib\\activation-1.1.jar
 file.reference.antlr-2.7.2.jar=lib\\antlr-2.7.2.jar
-file.reference.antlr-2.7.7.jar=lib\\hibernate-4.3.0\\lib\\required\\antlr-2.7.7.jar
 file.reference.aopalliance.jar=lib\\aopalliance.jar
 file.reference.aspectjweaver.jar=lib\\aspectjweaver.jar
 file.reference.cglib-nodep-2.1_3.jar=lib\\cglib-nodep-2.1_3.jar
@@ -46,72 +45,28 @@ file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
 file.reference.commons-pool-1.5.6.jar=lib\\commons-pool-1.5.6.jar
 file.reference.commons-validator-1.3.0.jar=lib\\commons-validator-1.3.0.jar
 file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
-file.reference.dom4j-1.6.1.jar-1=lib\\hibernate-4.3.0\\lib\\required\\dom4j-1.6.1.jar
-file.reference.ehcache-core-2.4.3.jar=lib/hibernate-4.3.0/lib/optional/ehcache/ehcache-core-2.4.3.jar
 file.reference.gson-2.2.4.jar=lib\\gson-2.2.4.jar
-file.reference.hibernate-commons-annotations-4.0.4.Final.jar=lib\\hibernate-4.3.0\\lib\\required\\hibernate-commons-annotations-4.0.4.Final.jar
-file.reference.hibernate-core-4.3.0.Final.jar=lib\\hibernate-4.3.0\\lib\\required\\hibernate-core-4.3.0.Final.jar
-file.reference.hibernate-ehcache-4.3.0.Final.jar=lib/hibernate-4.3.0/lib/optional/ehcache/hibernate-ehcache-4.3.0.Final.jar
-file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=lib\\hibernate-4.3.0\\lib\\required\\hibernate-jpa-2.1-api-1.0.0.Final.jar
 file.reference.hsqldb-2.3.1.jar=lib\\hsqldb-2.3.1.jar
-file.reference.jandex-1.1.0.Final.jar=lib\\hibernate-4.3.0\\lib\\required\\jandex-1.1.0.Final.jar
-file.reference.javassist-3.18.1-GA.jar=lib\\hibernate-4.3.0\\lib\\required\\javassist-3.18.1-GA.jar
-file.reference.jboss-logging-3.1.3.GA.jar=lib\\hibernate-4.3.0\\lib\\required\\jboss-logging-3.1.3.GA.jar
-file.reference.jboss-logging-annotations-1.2.0.Beta1.jar=lib\\hibernate-4.3.0\\lib\\required\\jboss-logging-annotations-1.2.0.Beta1.jar
-file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=lib\\hibernate-4.3.0\\lib\\required\\jboss-transaction-api_1.2_spec-1.0.0.Final.jar
 file.reference.log4j-1.2.14.jar=lib\\log4j-1.2.14.jar
 file.reference.mail-1.4.jar=lib\\mail-1.4.jar
 file.reference.mysql-connector-java-5.1.25-bin.jar=lib\\mysql-connector-java-5.1.25-bin.jar
 file.reference.quartz-all-1.6.5.jar=lib\\quartz-all-1.6.5.jar
 file.reference.slf4j-api-1.5.8.jar=lib\\slf4j-api-1.5.8.jar
-file.reference.slf4j-api-1.6.1.jar=lib/hibernate-4.3.0/lib/optional/ehcache/slf4j-api-1.6.1.jar
 file.reference.slf4j-simple-1.5.8.jar=lib\\slf4j-simple-1.5.8.jar
-file.reference.spring-aop-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-aop-4.0.0.RELEASE.jar
-file.reference.spring-aspects-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-aspects-4.0.0.RELEASE.jar
-file.reference.spring-beans-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-beans-4.0.0.RELEASE.jar
-file.reference.spring-build-src-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-build-src-4.0.0.RELEASE.jar
-file.reference.spring-context-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-context-4.0.0.RELEASE.jar
-file.reference.spring-context-support-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-context-support-4.0.0.RELEASE.jar
-file.reference.spring-core-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-core-4.0.0.RELEASE.jar
-file.reference.spring-expression-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-expression-4.0.0.RELEASE.jar
-file.reference.spring-framework-bom-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-framework-bom-4.0.0.RELEASE.jar
-file.reference.spring-instrument-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-instrument-4.0.0.RELEASE.jar
-file.reference.spring-instrument-tomcat-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-instrument-tomcat-4.0.0.RELEASE.jar
-file.reference.spring-jdbc-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-jdbc-4.0.0.RELEASE.jar
-file.reference.spring-jms-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-jms-4.0.0.RELEASE.jar
-file.reference.spring-messaging-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-messaging-4.0.0.RELEASE.jar
-file.reference.spring-orm-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-orm-4.0.0.RELEASE.jar
-file.reference.spring-oxm-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-oxm-4.0.0.RELEASE.jar
-file.reference.spring-security-acl-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-acl-3.1.4.RELEASE.jar
-file.reference.spring-security-aspects-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-aspects-3.1.4.RELEASE.jar
-file.reference.spring-security-cas-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-cas-3.1.4.RELEASE.jar
-file.reference.spring-security-config-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-config-3.1.4.RELEASE.jar
-file.reference.spring-security-core-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-core-3.1.4.RELEASE.jar
-file.reference.spring-security-crypto-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-crypto-3.1.4.RELEASE.jar
-file.reference.spring-security-ldap-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-ldap-3.1.4.RELEASE.jar
-file.reference.spring-security-openid-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-openid-3.1.4.RELEASE.jar
-file.reference.spring-security-remoting-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-remoting-3.1.4.RELEASE.jar
-file.reference.spring-security-taglibs-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-taglibs-3.1.4.RELEASE.jar
-file.reference.spring-security-web-3.1.4.RELEASE.jar=lib\\springsecurity-3.1.2\\spring-security-web-3.1.4.RELEASE.jar
-file.reference.spring-test-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-test-4.0.0.RELEASE.jar
-file.reference.spring-tx-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-tx-4.0.0.RELEASE.jar
-file.reference.spring-web-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-web-4.0.0.RELEASE.jar
-file.reference.spring-webmvc-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-webmvc-4.0.0.RELEASE.jar
-file.reference.spring-webmvc-portlet-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-webmvc-portlet-4.0.0.RELEASE.jar
-file.reference.spring-websocket-4.0.0.RELEASE.jar=lib\\spring-4.0.0\\spring-websocket-4.0.0.RELEASE.jar
 file.reference.standard.jar=lib\\standard.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=false
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.2.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.3.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-spdy.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.activation-1.1.jar}:\
     ${file.reference.antlr-2.7.2.jar}:\
     ${file.reference.aopalliance.jar}:\
+    ${file.reference.aspectjweaver.jar}:\
     ${file.reference.cglib-nodep-2.1_3.jar}:\
     ${file.reference.commons-beanutils-1.7.0.jar}:\
     ${file.reference.commons-chain-1.1.jar}:\
@@ -126,6 +81,7 @@ javac.classpath=\
     ${file.reference.commons-pool-1.5.6.jar}:\
     ${file.reference.commons-validator-1.3.0.jar}:\
     ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.gson-2.2.4.jar}:\
     ${file.reference.hsqldb-2.3.1.jar}:\
     ${file.reference.log4j-1.2.14.jar}:\
     ${file.reference.mail-1.4.jar}:\
@@ -134,55 +90,11 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.5.8.jar}:\
     ${file.reference.slf4j-simple-1.5.8.jar}:\
     ${file.reference.standard.jar}:\
-    ${file.reference.spring-aop-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-aspects-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-beans-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-build-src-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-context-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-context-support-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-core-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-expression-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-framework-bom-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-instrument-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-instrument-tomcat-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-jdbc-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-jms-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-messaging-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-orm-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-oxm-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-test-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-tx-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-web-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-webmvc-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-webmvc-portlet-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-websocket-4.0.0.RELEASE.jar}:\
-    ${file.reference.spring-security-acl-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-aspects-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-cas-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-config-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-core-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-crypto-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-ldap-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-openid-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-remoting-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-taglibs-3.1.4.RELEASE.jar}:\
-    ${file.reference.spring-security-web-3.1.4.RELEASE.jar}:\
-    ${file.reference.antlr-2.7.7.jar}:\
-    ${file.reference.dom4j-1.6.1.jar-1}:\
-    ${file.reference.hibernate-commons-annotations-4.0.4.Final.jar}:\
-    ${file.reference.hibernate-core-4.3.0.Final.jar}:\
-    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
-    ${file.reference.jandex-1.1.0.Final.jar}:\
-    ${file.reference.javassist-3.18.1-GA.jar}:\
-    ${file.reference.jboss-logging-3.1.3.GA.jar}:\
-    ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
-    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
-    ${file.reference.aspectjweaver.jar}:\
-    ${file.reference.ehcache-core-2.4.3.jar}:\
-    ${file.reference.hibernate-ehcache-4.3.0.Final.jar}:\
-    ${file.reference.slf4j-api-1.6.1.jar}:\
-    ${file.reference.gson-2.2.4.jar}:\
-    ${libs.hibernate4-persistence.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.spring4.0.classpath}:\
+    ${libs.hibernate4.3.classpath}:\
+    ${libs.junit.classpath}:\
+    ${libs.springSecurity3.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -228,6 +140,6 @@ src.user.dir=src\\user
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=BaseWeb.war
+war.name=publicweb.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
