--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,24 +2,7 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs \u4efb\u52a1
 libs.CopyLibs.prop-version=2.0
-libs.hibernate4-persistence.classpath=\
-    ${base}/hibernate4-persistence/antlr-2.7.7.jar;\
-    ${base}/hibernate4-persistence/c3p0-0.9.2.1.jar;\
-    ${base}/hibernate4-persistence/hibernate-c3p0-4.2.6.Final.jar;\
-    ${base}/hibernate4-persistence/dom4j-1.6.1.jar;\
-    ${base}/hibernate4-persistence/ehcache-core-2.4.3.jar;\
-    ${base}/hibernate4-persistence/hibernate-ehcache-4.2.6.Final.jar;\
-    ${base}/hibernate4-persistence/hibernate-core-4.2.6.Final.jar;\
-    ${base}/hibernate4-persistence/jboss-logging-3.1.0.GA.jar;\
-    ${base}/hibernate4-persistence/hibernate-commons-annotations-4.0.2.Final.jar;\
-    ${base}/hibernate4-persistence/hibernate-entitymanager-4.2.6.Final.jar;\
-    ${base}/hibernate4-persistence/javassist-3.15.0-GA.jar;\
-    ${base}/hibernate4-persistence/jboss-transaction-api_1.1_spec-1.0.1.Final.jar;\
-    ${base}/hibernate4-persistence/slf4j-api-1.6.1.jar;\
-    ${base}/hibernate4-persistence/slf4j-simple-1.6.1.jar;\
-    ${base}/hibernate4-persistence/hibernate-jpa-2.0-api-1.0.1.Final.jar
-libs.hibernate4-persistence.displayName=Hibernate 4.x(JPA2.0)
-libs.hibernate4-persistence.prop-maven-dependencies=\n                org.hibernate:hibernate-entitymanager:4.2.6.Final:jar\n            
+               
 libs.hibernate4.3.classpath=\
     ${base}/hibernate-4.3.0/lib/required/antlr-2.7.7.jar;\
     ${base}/hibernate-4.3.0/lib/required/dom4j-1.6.1.jar;\
@@ -30,7 +13,10 @@ libs.hibernate4.3.classpath=\
     ${base}/hibernate-4.3.0/lib/required/javassist-3.18.1-GA.jar;\
     ${base}/hibernate-4.3.0/lib/required/jboss-logging-3.1.3.GA.jar;\
     ${base}/hibernate-4.3.0/lib/required/jboss-logging-annotations-1.2.0.Beta1.jar;\
-    ${base}/hibernate-4.3.0/lib/required/jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+    ${base}/hibernate-4.3.0/lib/required/jboss-transaction-api_1.2_spec-1.0.0.Final.jar;\
+    ${base}/hibernate-4.3.0/lib/optional/ehcache/ehcache-core-2.4.3.jar;\
+    ${base}/hibernate-4.3.0/lib/optional/ehcache/hibernate-ehcache-4.3.0.Final.jar;\
+    ${base}/hibernate-4.3.0/lib/optional/ehcache/slf4j-api-1.6.1.jar
 libs.hibernate4.3.displayName=hibernate4.3
 libs.javaee-endorsed-api-6.0.classpath=\
     ${base}/javaee-endorsed-api-6.0/javax.annotation.jar;\
