--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -18,6 +18,11 @@ libs.hibernate4.3.classpath=\
     ${base}/hibernate-4.3.0/lib/optional/ehcache/hibernate-ehcache-4.3.0.Final.jar;\
     ${base}/hibernate-4.3.0/lib/optional/ehcache/slf4j-api-1.6.1.jar
 libs.hibernate4.3.displayName=hibernate4.3
+libs.jackson-2.4.2.classpath=\
+    ${base}/jackson-2.4.2/jackson-annotations-2.4.2.jar;\
+    ${base}/jackson-2.4.2/jackson-core-2.4.2.jar;\
+    ${base}/jackson-2.4.2/jackson-databind-2.4.2.jar
+libs.jackson-2.4.2.displayName=jackson-2.4.2
 libs.javaee-endorsed-api-6.0.classpath=\
     ${base}/javaee-endorsed-api-6.0/javax.annotation.jar;\
     ${base}/javaee-endorsed-api-6.0/jaxb-api-osgi.jar;\
