--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,7 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=ext/packages/ext-locale/build
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -92,9 +93,10 @@ javac.classpath=\
     ${file.reference.standard.jar}:\
     ${libs.junit_4.classpath}:\
     ${libs.spring4.0.classpath}:\
-    ${libs.hibernate4.3.classpath}:\
     ${libs.junit.classpath}:\
-    ${libs.springSecurity3.classpath}
+    ${libs.springSecurity3.classpath}:\
+    ${libs.hibernate4.3.classpath}:\
+    ${libs.jackson-2.4.2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
