--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 <!---->    
     <filter-mapping> 
         <filter-name>springSecurityFilterChain</filter-name>  
-        <url-pattern>/*</url-pattern>  
+        <url-pattern>*.do</url-pattern>  
     </filter-mapping> 
 
     <filter-mapping>
