--- a/web/app.json
+++ b/web/app.json
@@ -7,7 +7,7 @@
     /**
      * The relative path to the appliaction's markup file (html, jsp, asp, etc.)
      */
-    "indexHtmlPath": "index.html",
+    "indexHtmlPath": "index.jsp",
 
     /**
      * Comma-separated string with the paths of directories or files to search. Any classes
