--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <filter-name>springSecurityFilterChain</filter-name>  
         <url-pattern>*.do</url-pattern>  
     </filter-mapping> 
+    <filter-mapping> 
+        <filter-name>springSecurityFilterChain</filter-name>  
+        <url-pattern>*.jsp</url-pattern>  
+    </filter-mapping> 
 
     <filter-mapping>
         <filter-name>encodingFilter</filter-name>
