--- a/src/java/log4j.properties
+++ b/src/java/log4j.properties
@@ -11,3 +11,6 @@ log4j.appender.A2.file=../logs/weixin.log
 log4j.appender.A2.DatePattern='.'yyyy-MM-dd
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.layout.ConversionPattern=%d %p [%c] - <%m>%n
+
+log4j.logger.com.tencent=DEBUG
+log4j.logger.net.tencent=DEBUG
