--- a/src/java/log4j.properties
+++ b/src/java/log4j.properties
@@ -1,16 +1,18 @@
 log4j.rootLogger=INFO,A2,stdout
+
+log4j.logger.com.tencent=DEBUG
+log4j.logger.net.tencent=DEBUG
+
 #console config
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
-log4j.logger.com.tencent=DEBUG
 
 #file config
 log4j.appender.A2=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.A2.file=../logs/weixin.log
+log4j.appender.A2.file=../logs/publicweb.log
 log4j.appender.A2.DatePattern='.'yyyy-MM-dd
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
-log4j.logger.com.tencent=DEBUG
-log4j.logger.net.tencent=DEBUG
+
